Fixes for dark mode (#33014)
* Fixing the keyboard shortcut modal appearance in dark mode.

* Fixing the language server icon colors in dark mode.

* Fixing the white background in markdown code blocks in dark mode (Code issue #942)

* Fixing the file tree background color (Code repo issue #986)

* Updating file_tree snapshots.

* Using variables in the shortcuts.scss file, moving the language icon selector to the path rather than the SVG itself.

* Fixing a type error for an unused import.

--- a/x-pack/plugins/code/public/components/main/main.scss
+++ b/x-pack/plugins/code/public/components/main/main.scss
@@ -26,6 +26,7 @@
 }
 
 .code-navigation__sidebar {
+  background-color: $euiColorLightestShade;
   width: 16rem;
   border-right: $euiBorderThin;
   display: flex;
@@ -258,4 +259,9 @@
   &.codeBlame__item--first{
     border-top: none;
   }
+}
+
+
+.codeIcon__language {
+  fill: $euiColorDarkestShade;
 }
